Description phrasing & fixed line spacing in title

--- a/assets/css/style-fixed.css
+++ b/assets/css/style-fixed.css
@@ -801,7 +801,7 @@
     font-weight: normal;
     font-size: 40px;
     text-align: center;
-    line-height: 36px;
+    line-height: 42px;
   }
   section #title p {
     color: #d7cfbe;
